--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-## Replace API_KEY and BASE_URL values with ypur generated api key and url from a 
+## Replace API_KEY and BASE_URL values with an API Key and URL generated from a 
 ## Open AI's chat completion API(https://platform.openai.com/docs/guides/chat-completions) compatible provider.
 ## Suggested Providers - OpenRouter(https://openrouter.ai/) and GROQ(https://console.groq.com)
 
