--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
+  "semi": true,
   "singleQuote": true,
-  "semi": true
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "printWidth": 80,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
