--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "dev-mate-cli",
   "version": "0.1.0",
-  "description": "command line tool using LLMs for code optimization",
+  "description": "command line tool using LLMs for code documentation",
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "format:fix": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "lint:check": "eslint . --quiet"
   },
   "repository": {
     "type": "git",
@@ -22,11 +28,12 @@
   },
   "homepage": "https://github.com/mayank-Pareek/dev-mate-cli#readme",
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@types/node": "^22.5.4",
-    "@typescript-eslint/eslint-plugin": "^8.5.0",
-    "@typescript-eslint/parser": "^8.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "dotenv": "^16.4.5",
-    "eslint": "^9.10.0",
+    "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
