--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "format:fix": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "lint:check": "eslint . --quiet"
+    "lint:check": "eslint . --quiet",
+    "test": "jest -c jest.config.js --runInBand --",
+    "test:watch": "jest -c jest.config.js --runInBand --watch --",
+    "coverage": "jest -c jest.config.js --runInBand --coverage"
   },
   "repository": {
     "type": "git",
@@ -36,13 +39,17 @@
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
+    "nock": "^13.5.5",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@types/jest": "^29.5.14",
     "commander": "^12.1.0",
     "openai": "^4.58.2",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "ts-jest": "^29.2.5"
   }
 }
