--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "ts-node src/index.ts",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "format:fix": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "lint:check": "eslint . --quiet",
+    "format": "biome format",
+    "format:fix": "biome format --write",
+    "format:changed": "biome format --write --changed",
+    "lint": "biome lint",
+    "lint:fix": "biome lint --fix",
+    "lint:changed": "biome lint --fix --changed",
     "test": "jest -c jest.config.js --runInBand --",
     "test:watch": "jest -c jest.config.js --runInBand --watch --",
     "coverage": "jest -c jest.config.js --runInBand --coverage"
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/mayank-Pareek/dev-mate-cli#readme",
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.14.0",
     "@types/node": "^22.5.4",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
