remove es-lint and prettier

--- a/biome.json
+++ b/biome.json
@@ -41,8 +41,11 @@
       "correctness": {
         "noUnusedVariables": "error",
         "useExhaustiveDependencies": "error"
-      }
+      },
+      "suspicious": {
+        "noExplicitAny": "warn"
     }
+  }
   },
   "javascript": {
     "formatter": {
