--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "dev": "ts-node src/index.ts",
+    "check": "biome check",
+    "check:fix": "biome check --fix",
+    "check:changed": "biome check --changed",
     "format": "biome format",
+    "format:changed": "biome format --changed",
     "format:fix": "biome format --write",
-    "format:changed": "biome format --write --changed",
     "lint": "biome lint",
+    "lint:changed": "biome lint --changed",
     "lint:fix": "biome lint --fix",
-    "lint:changed": "biome lint --fix --changed",
     "test": "jest -c jest.config.js --runInBand --",
     "test:watch": "jest -c jest.config.js --runInBand --watch --",
     "coverage": "jest -c jest.config.js --runInBand --coverage"
