Use npm script for linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,18 +9,21 @@ on:
       - main
 
 jobs:
-  quality:
-    name: Code Quality
+  lint:
+    name: Biome Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Biome
-        uses: biomejs/setup-biome@v2
+      - name: Setup node
+        uses: actions/setup-node@v4
         with:
-          version: latest
-      - name: Run Biome
-        run: biome ci .
+          node-version: 'lts/*'
+          cache: 'npm'
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run Biome Lint
+        run: npm run lint
 
   unit-test:
     name: Unit Tests
